--- a/SingletonTemplate.Console/SingletonTemplate.Console.csproj
+++ b/SingletonTemplate.Console/SingletonTemplate.Console.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\DesignPatternsTemplates\DesignPatternsTemplates.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PatternTests\" />
+  </ItemGroup>
+
 </Project>
